# generic-dns-update

./: .appveyor.yml  .travis.yml  Cargo.toml  LICENSE  README.md
scripts/: build.sh  config.sh  package.sh
src/: config.rs  dns.rs  error.rs  gandi.rs  main.rs  myip.rs
src/xmlrpc/: client.rs  encoding.rs  mod.rs  protocol.rs
